--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <main>
-    <img class="main-illustration" src="assets/images/image-omelette.jpeg" alt="Picture of a fluffy, golden omelet, with fillings spilling out in every direction, hmmm delicious...">
+    <div class="main-illustration"><img src="assets/images/image-omelette.jpeg" alt="Picture of a fluffy, golden omelet, with fillings spilling out in every direction, hmmm delicious..."></div>
     <header>
       <h1>Simple Omelette Recipe</h1>
       <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
